--- a/requirements.txt
+++ b/requirements.txt
@@ -70,9 +70,9 @@ sqlparse==0.5.0
 starlette==0.37.2
 sympy==1.12
 tbb==2021.11.0
-torch==2.3.0+cu118
-torchaudio==2.3.0+cu118
-torchvision==0.18.0+cu118
+torch==2.3.0
+torchaudio==2.3.0
+torchvision==0.18.0
 typer==0.12.3
 typing_extensions==4.9.0
 tzdata==2024.1
