--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,18 @@ jobs:
     if: github.ref != 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+      - name: Fetch main branch
+        run: git fetch origin main
       - name: Merge to main
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git fetch origin main
           git checkout main
           git merge ${{ github.ref }} --no-ff -m "Merge ${{ github.ref }} to main"
-          git push origin main
+      - name: Push changes
+        run: git push origin main
 
   build-and-push:
     needs: merge-to-main
