--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,31 @@ jobs:
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
+          fetch-depth: 0  # Fetch all history for the refs
       - name: Fetch main branch
-        run: git fetch origin main
-      - name: Merge to main
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git fetch origin main
+      - name: Debug current branch
+        run: |
+          echo "Current branch: ${{ github.ref }}"
+          git log --oneline -5
+      - name: Debug main branch
+        run: |
           git checkout main
-          git merge ${{ github.ref }} --no-ff -m "Merge ${{ github.ref }} to main"
+          git log --oneline -5
+      - name: Merge to main
+        id: merge_step
+        run: |
+          git checkout main
+          git merge ${{ github.ref }} --no-ff -m "Merge ${{ github.ref }} to main" || echo "Merge failed" > merge_failed.txt
+      - name: Check for merge failure
+        if: steps.merge_step.outputs.merge_failed
+        run: |
+          echo "Merge failed, attempting with --allow-unrelated-histories"
+          git merge ${{ github.ref }} --allow-unrelated-histories --no-ff -m "Merge ${{ github.ref }} to main"
       - name: Push changes
         run: git push origin main
 
@@ -29,7 +43,7 @@ jobs:
     needs: merge-to-main
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -117,7 +131,7 @@ jobs:
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
