--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,7 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0  # Fetch all history for the refs
       - name: Fetch main branch
-        run: |
-          git fetch origin main
+        run: git fetch origin main
       - name: Debug current branch
         run: |
           echo "Current branch: ${{ github.ref }}"
@@ -37,7 +36,11 @@ jobs:
           echo "Merge failed, attempting with --allow-unrelated-histories"
           git merge ${{ github.ref }} --allow-unrelated-histories --no-ff -m "Merge ${{ github.ref }} to main"
       - name: Push changes
-        run: git push origin main
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
+          git push origin main
 
   build-and-push:
     needs: merge-to-main
@@ -100,11 +103,14 @@ jobs:
           echo "::set-output name=version::$new_version"
 
       - name: Commit version bump
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add pyproject.toml
           git commit -m "Bump version to ${{ steps.increment_version.outputs.version }}"
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
           git push origin ${{ github.ref }}
 
       - name: Get version
@@ -188,11 +194,14 @@ jobs:
           echo "::set-output name=version::$new_version"
 
       - name: Commit version bump
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add pyproject.toml
           git commit -m "Bump version to ${{ steps.increment_version.outputs.version }}"
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
           git push origin ${{ github.ref }}
 
       - name: Get version
