--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,80 +3,16 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - 'feature/**'
       - 'main'
 
 jobs:
-  merge-to-main:
-    if: github.ref != 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref }}
-          fetch-depth: 0  # Fetch all history for the refs
-      - name: Fetch main branch
-        run: git fetch origin main
-      - name: Debug current branch
-        run: |
-          echo "Current branch: ${{ github.ref }}"
-          git log --oneline -5
-      - name: Debug main branch
-        run: |
-          git checkout main
-          git log --oneline -5
-      - name: Merge to main
-        id: merge_step
-        run: |
-          git checkout main
-          git merge ${{ github.ref }} --no-ff -m "Merge ${{ github.ref }} to main" || echo "Merge failed" > merge_failed.txt
-      - name: Check for merge failure
-        if: steps.merge_step.outputs.merge_failed
-        run: |
-          echo "Merge failed, attempting with --allow-unrelated-histories"
-          git merge ${{ github.ref }} --allow-unrelated-histories --no-ff -m "Merge ${{ github.ref }} to main"
-      - name: Push changes
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
-          git push origin main
-
   build-and-push:
-    needs: merge-to-main
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to Azure Container Registry
-        uses: azure/docker-login@v1
+      - name: Checkout the code
+        uses: actions/checkout@v3
         with:
-          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Build and push start_api
-        run: |
-          docker build -f Dockerfile.root -t ${{ secrets.ACR_LOGIN_SERVER }}/start_api:latest .
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/start_api:latest
-
-      - name: Build and push data services
-        run: |
-          services=("emails_manager" "hunter_domain_finder" "meetings_consumer" "pdl" "person_langsmith" "persons_manager")
-          for service in "${services[@]}"
-          do
-            docker build -f Dockerfile.data --build-arg SERVICE_NAME=$service -t ${{ secrets.ACR_LOGIN_SERVER }}/$service:latest .
-            docker push ${{ secrets.ACR_LOGIN_SERVER }}/$service:latest
-          done
-
-  build-and-push-feature:
-    if: github.ref != 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+          fetch-depth: 0  # Fetch all history for the refs
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
