--- a/Dockerfile.data
+++ b/Dockerfile.data
@@ -12,6 +12,10 @@ COPY common ../common
 COPY ai ../ai
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && \
+    apt-get install -y git libpq-dev gcc build-essential && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN pip install psycopg2-binary && pip install --no-cache-dir -r requirements.txt
 
 CMD ["python", "${SERVICE_NAME}.py"]
