--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,35 +10,39 @@ jobs:
   version-bump:
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout feature branch
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          ref: ${{ github.ref }}
+          fetch-depth: 0  # Fetch all history for the refs
 
       - name: Determine version increment
         id: determine_increment
         run: |
           commit_message=$(git log -1 --pretty=%B)
           if [[ $commit_message == *"[major]"* ]]; then
-            echo "INCREMENT=major" >> $GITHUB_OUTPUT
+            echo "major" > version_increment.txt
           elif [[ $commit_message == *"[minor]"* ]]; then
-            echo "INCREMENT=minor" >> $GITHUB_OUTPUT
+            echo "minor" > version_increment.txt
           else
-            echo "INCREMENT=patch" >> $GITHUB_OUTPUT
+            echo "patch" > version_increment.txt
           fi
+          cat version_increment.txt
 
       - name: Increment version
         id: increment_version
         run: |
+          # Extract the current version from pyproject.toml
           version=$(grep -m1 version pyproject.toml | cut -d '"' -f2)
+          # Split the version number into components
           IFS='.' read -ra ver <<< "$version"
           major=${ver[0]}
           minor=${ver[1]}
           patch=${ver[2]}
-          increment_type="${{ steps.determine_increment.outputs.INCREMENT }}"
+          # Read the version increment type
+          increment_type=$(cat version_increment.txt)
+          # Increment the appropriate version component
           if [[ "$increment_type" == "major" ]]; then
             major=$((major + 1))
             minor=0
@@ -49,45 +53,58 @@ jobs:
           else
             patch=$((patch + 1))
           fi
+          # Form the new version number
           new_version="$major.$minor.$patch"
+          # Update the pyproject.toml file with the new version
           sed -i "s/version = \"$version\"/version = \"$new_version\"/" pyproject.toml
           echo "New version: $new_version"
-          echo "VERSION=$new_version" >> $GITHUB_OUTPUT
+          # Set the new version as an output variable
+          echo "::set-output name=version::$new_version"
 
       - name: Commit version bump
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add pyproject.toml
-          git commit -m "Bump version to ${{ steps.increment_version.outputs.VERSION }}"
-          git push
+          git commit -m "Bump version to ${{ steps.increment_version.outputs.version }}"
+          git push origin HEAD:${{ github.ref }}
 
   merge-to-main:
     needs: version-bump
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v3
         with:
           ref: 'main'
-          fetch-depth: 0
+          fetch-depth: 0  # Fetch all history for the refs
+
+      - name: Fetch feature branch
+        run: git fetch origin ${{ github.head_ref }}:${{ github.head_ref }}
 
       - name: Merge feature branch into main
         run: |
-          git fetch origin ${{ github.ref }}
-          git merge --no-ff ${{ github.ref }} -m "Merge ${{ github.ref }} into main"
-          git push
+          git checkout main
+          git merge ${{ github.head_ref }} --no-ff -m "Merge ${{ github.head_ref }} into main"
+
+      - name: Push changes
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
+          git push origin main
 
   build-and-push:
     needs: merge-to-main
-    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
+        with:
+          ref: 'main'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -103,18 +120,18 @@ jobs:
         id: get_version
         run: |
           version=$(grep -m1 version pyproject.toml | cut -d '"' -f2)
-          echo "VERSION=$version" >> $GITHUB_OUTPUT
+          echo "::set-output name=version::$version"
 
       - name: Build and push start_api
         run: |
-          docker build -f Dockerfile.root -t ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.VERSION }} .
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.VERSION }}
+          docker build -f Dockerfile.root -t ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.version }} .
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.version }}
 
       - name: Build and push data services
         run: |
           services=("emails_manager" "hunter_domain_finder" "meetings_consumer" "pdl" "person_langsmith" "persons_manager")
           for service in "${services[@]}"
           do
-            docker build -f Dockerfile.data --build-arg SERVICE_NAME=$service -t ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.VERSION }} .
-            docker push ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.VERSION }}
+            docker build -f Dockerfile.data --build-arg SERVICE_NAME=$service -t ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.version }} .
+            docker push ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.version }}
           done
