--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: TBD and Docker Build
+name: Version Bump and Merge
 
 on:
   push:
@@ -96,44 +96,3 @@ jobs:
         run: |
           git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
           git push origin main
-
-workflow_run:
-  jobs:
-    build-and-push:
-      runs-on: ubuntu-latest
-      needs: merge-to-main
-      steps:
-        - name: Checkout the code
-          uses: actions/checkout@v3
-          with:
-            ref: 'main'
-
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-
-        - name: Login to Azure Container Registry
-          uses: azure/docker-login@v1
-          with:
-            login-server: ${{ secrets.ACR_LOGIN_SERVER }}
-            username: ${{ secrets.ACR_USERNAME }}
-            password: ${{ secrets.ACR_PASSWORD }}
-
-        - name: Get version from pyproject.toml
-          id: get_version
-          run: |
-            version=$(grep -m1 version pyproject.toml | cut -d '"' -f2)
-            echo "::set-output name=version::$version"
-
-        - name: Build and push start_api
-          run: |
-            docker build -f Dockerfile.root -t ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.version }} .
-            docker push ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.version }}
-
-        - name: Build and push data services
-          run: |
-            services=("emails_manager" "hunter_domain_finder" "meetings_consumer" "pdl" "person_langsmith" "persons_manager")
-            for service in "${services[@]}"
-            do
-              docker build -f Dockerfile.data --build-arg SERVICE_NAME=$service -t ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.version }} .
-              docker push ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.version }}
-            done
