--- a/Dockerfile.data
+++ b/Dockerfile.data
@@ -8,8 +8,8 @@ ARG SERVICE_NAME
 # Copy necessary files and folders
 COPY data/${SERVICE_NAME}.py .
 COPY data ./data
-COPY common ../common
-COPY ai ../ai
+COPY common ./common
+COPY ai ./ai
 COPY requirements.txt .
 
 RUN apt-get update && \
