--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - main
+  workflow_run:
+    workflows: ["Auto-merge feature to main"]
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
