--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -9,6 +9,8 @@ on:
       - main
   workflow_run:
     workflows: ["Auto-merge feature to main"]
+    types:
+      - completed
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
