Remove --no-ff to avoid merge commit

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,14 @@ on:
   push:
     branches:
       - 'feature/**'  # Trigger on push to any feature branch
+  pull_request:
+    branches:
+      - main
+  workflow_run:
+    workflows: ["Auto-merge feature to main"]
+    types:
+      - completed
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   auto-merge:
@@ -22,5 +30,5 @@ jobs:
       - name: Merge feature branch to main
         run: |
           git checkout main
-          git merge --no-ff ${{ github.ref }}
+          git merge ${{ github.ref }}
           git push origin main
