Added another test with real data

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ key.pem
 Leads_updated_only_vagif.csv
 data/test/specific_persons_test
 data/test/data_test_meetings.py
+data/test/data_test_new_processed_profile.py
 
 .idea/
 
