--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -79,21 +79,29 @@ jobs:
           echo "Job status: ${{ job.status }}"
           echo "Event name: ${{ github.event_name }}"
           echo "Ref: ${{ github.ref }}"
-
+          
       - name: Checkout genie-chart repository
         uses: actions/checkout@v3
         with:
           repository: thegenieai/genieai-helm-charts
           path: genie-chart
           token: ${{ secrets.GH_PAT }}
-
       - name: Update genie-chart values
         run: |
           cd genie-chart/genie-chart/genie-chart
-          #sed -i 's/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
-          sed -i '0,/tag: .*/s/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add values.yaml
-          git commit -m "Update image tag to ${{ steps.get_version.outputs.tag }}"
-          git push
+          echo "Current directory: $(pwd)"
+          echo "Contents of values.yaml before changes:"
+          cat values.yaml
+          sed -i '0,/tag: .*/{n;s/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/}' values.yaml
+          echo "Contents of values.yaml after changes:"
+          cat values.yaml
+          if git diff --exit-code; then
+            echo "No changes were made to values.yaml"
+            exit 1
+          else
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add values.yaml
+            git commit -m "Update image tag to ${{ steps.get_version.outputs.tag }}"
+            git push
+          fi
