--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 /azure_vm_key.pem
+/data/test/data_test_company.py
