--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -65,6 +65,7 @@ jobs:
           context: .
           file: Dockerfile.temp
           tags: temp-cache-image:latest
+          load: true
           cache-from: type=gha,scope=temp-dockerfile-cache
           cache-to: type=gha,mode=max,scope=temp-dockerfile-cache
           
